feat: add simple search
