# app/patent/service/dto/search.go
@@ -1,0 +1,6 @@
+package dto
+
+type SimpleSearchReq struct {
+	Query string `json:"Query"`
+	DB    string `json:"DB"`
+}
